@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.13 2004/08/21 07:34:03 nenolod Exp $
+$Id: ChangeLog,v 1.14 2004/08/23 01:39:54 nenolod Exp $
 
 ShadowIRCd 3.2:
 
@@ -6,6 +6,7 @@ ShadowIRCd 3.2:
 * Changed config parser.
 * Added a configuration creator by NhJm.
 * Imported 3.1-2 and 3.1-3 changes.
+* Fixed obscure nick collision bug.
 
 ShadowIRCd 3.1-1:
 
